// SonarQube, open source software quality management tool.
// Copyright (C) 2008-2015 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarQube is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarQube is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

syntax = "proto2";

package sonarqube.ws.commons;

option java_package = "org.sonarqube.ws";
option java_outer_classname = "Common";
option optimize_for = SPEED;

message Paging {
  optional int32 pageIndex = 1;
  optional int32 pageSize = 2;
  optional int32 total = 3;
}

message Facet {
  // kind of key
  optional string property = 1;
  repeated FacetValue values = 2;
}

message Facets {
  repeated Facet facets = 1;
}

message FacetValue {
  optional string val = 1;
  optional int64 count = 2;
}

enum Severity {
  INFO = 0;
  MINOR = 1;
  MAJOR = 2;
  CRITICAL = 3;
  BLOCKER = 4;
}

message Rule {
  optional string key = 1;
  optional string name = 2;
  optional string lang = 3;
  optional RuleStatus status = 4;
  optional string langName = 5;
}

message Rules {
  repeated Rule rules = 1;
}

enum RuleStatus {
  BETA = 0;
  DEPRECATED = 1;
  READY = 2;
  REMOVED = 3;
}

message User {
  optional string login = 1;
  optional string name = 2;
  optional string email = 3;
  optional bool active = 4;
}

message Users {
  repeated User users = 1;
}

// Lines start at 1 and line offsets start at 0
message TextRange {
  // Start line. Should never be absent
  optional int32 startLine = 1;

  // End line (inclusive). Absent means it is same as start line
  optional int32 endLine = 2;

  // If absent it means range starts at the first offset of start line
  optional int32 startOffset = 3;

  // If absent it means range ends at the last offset of end line
  optional int32 endOffset = 4;
}
